PipOs - FormBuilder Checks and Bugfixes

--- a/packages/attack/templates/attack.html
+++ b/packages/attack/templates/attack.html
@@ -57,7 +57,7 @@
                 <div class="row">
                   {{#components}}
                   <div class="col-sm-6">
-                    <button class="btn btn-sm btn-block btn-{{color}} add_component_btn" data-class-name="{{class_name}}" style="text-align: left;"><i class="fa {{icon}}"></i>&nbsp;{{name}}<br><span style="font-size: 12px;">{{description}}</span></button>
+                    <button class="btn btn-block btn-{{color}} add_component_btn" data-class-name="{{class_name}}"><i class="fa {{icon}}"></i>&nbsp;{{name}}</button>
                   </div>
                   {{/components}}
                 </div>
