--- a/assets/css/pipos.css
+++ b/assets/css/pipos.css
@@ -249,5 +249,26 @@ button.btn i.pull-left {
   -webkit-box-shadow: 0px 0px 60px 30px rgba(11,97,33,0.6);
   -moz-box-shadow: 0px 0px 60px 30px rgba(11,97,33,0.6);
   box-shadow: 0px 0px 60px 30px rgba(11,97,33,0.6);
+  max-height: 400px;
+  overflow: scroll;
+}
 
+.pip-info-text {
+  color: #868e96!important;
+  font-size: 12px;
+}
+
+
+input.pip-control,
+input.pip-control:focus,
+textarea.pip-control,
+textarea.pip-control:focus,
+select.pip-control,
+select.pip-control:focus
+{
+  border: 1px dashed #81F79F !important;
+  border-radius: 2px !important;
+  background-color: #000000;
+  color: #81F79F !important;
+  font-size: 12px !important;
 }
