--- a/packages/attack/templates/attack.html
+++ b/packages/attack/templates/attack.html
@@ -123,7 +123,7 @@
   </div>
 
   <!-- Execution Terminal Modal -->
-  <div id="modal_execute_attack" class="pip-modal" style="display:none;">
+  <div id="modal_execute_attack" class="pip-modal pip-modal-fullsize btn-quit-attack" style="display:none;">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -131,7 +131,7 @@
             <div class="card-body pip-card-body">
               <p class="card-text pip-card-title">Attack Execution</p>
               <p class="card-text pip-card-text">
-                <div id="execution_terminal" style="height: 100%;"></div>
+                <div id="execution_terminal" class="pip-terminal" style="height: 100%;"></div>
               </p>
             </div>
           </div>
