PipOs - Fixing EventManager

--- a/packages/attack/templates/attack.html
+++ b/packages/attack/templates/attack.html
@@ -129,7 +129,7 @@
         <div class="col-sm-12">
           <div class="card pip-card">
             <div class="card-body pip-card-body">
-              <p class="card-text pip-card-title">Attack Execution</p>
+              <p class="card-text pip-card-title">Attack Execution (close by Double Click)</p>
               <p class="card-text pip-card-text">
                 <div id="execution_terminal" class="pip-terminal" style="height: 100%;"></div>
               </p>
