PipOs - Preparation for Simple Attack Components

--- a/packages/attack/templates/attack.html
+++ b/packages/attack/templates/attack.html
@@ -56,7 +56,7 @@
               <p class="card-text pip-card-text">
                 <div class="row">
                   {{#components}}
-                  <div class="col-sm-6">
+                  <div class="col-sm-6" style="margin-bottom: 10px;">
                     <button class="btn btn-block btn-{{color}} add_component_btn" data-class-name="{{class_name}}"><i class="fa {{icon}}"></i>&nbsp;{{name}}</button>
                   </div>
                   {{/components}}
